// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 45,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 2.36,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 147,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 33,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 294,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 8,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1399999999999997,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.0975000000000001,
  "hp": 190,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 13,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1199999999999997,
  "critResistPct": 4.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 14.5,
  "healMult": 1.1725,
  "hp": 640,
  "intStat": 148,
  "magicAtk": 33,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 29,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 23,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 21.25,
  "critMult": 2.84,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 16.8,
  "extraAttackChancePct": 59.5,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 18,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 119,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1799999999999997,
  "critResistPct": 1.5,
  "def": 25,
  "evasionPct": 3.7,
  "extraAttackChancePct": 15,
  "healMult": 1.7175000000000002,
  "hp": 795,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 795,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 39,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.3859999999999997,
  "critResistPct": 1.5,
  "def": 13,
  "evasionPct": 3.7,
  "extraAttackChancePct": 13.5,
  "healMult": 1.2575,
  "hp": 680,
  "intStat": 15,
  "magicAtk": 19,
  "magicDef": 7,
  "maxHp": 680,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 27,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "a340acabe30fe09800e7bef6d2babc06a69ae867",
    "outcome": "win",
    "playerHp": 680,
    "playerMp": 227,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "2004504d606da33da1bae62bf795b582c2ef6dff",
    "outcome": "win",
    "playerHp": 672,
    "playerMp": 227,
    "turns": 23,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "b0d06252900f819cc2a2c60988b09da0324da423",
    "outcome": "win",
    "playerHp": 512,
    "playerMp": 227,
    "turns": 45,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "8face053f0ce0185d30e692fcaceec1fde5ae504",
    "outcome": "win",
    "playerHp": 633,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "32b828def0de692c13a205c6f57df9150b61a37f",
    "outcome": "win",
    "playerHp": 346,
    "playerMp": 501,
    "turns": 63,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "8b945a888c7c63de0372511497635d0559957fbe",
    "outcome": "win",
    "playerHp": 289,
    "playerMp": 227,
    "turns": 521,
  },
  {
    "enemyHp": 214,
    "label": "heal_vs_들소_boss",
    "logSha": "ff73373339d772f7e5c0bfcb598ba815d351be38",
    "outcome": "lose",
    "playerHp": 795,
    "playerMp": 227,
    "turns": 257,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "ab5e8074c64cb583c15133aae7c45451cc97dc54",
    "outcome": "win",
    "playerHp": 612,
    "playerMp": 311,
    "turns": 30,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "b6cac6e1f9f83776407d1c644b89067ed3dd53cb",
    "outcome": "win",
    "playerHp": 185,
    "playerMp": 92,
    "turns": 26,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "abab7e563c0e2ea049244bf49f157a96af9698ef",
    "outcome": "p1_win",
    "turns": 91,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "a3630a71275a62ccef6bba9fd224d54615b5d5bc",
    "outcome": "p1_win",
    "turns": 63,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "3bdd9c384ea95d17f2e947aa47222f8cfd4b3d5e",
    "outcome": "p2_win",
    "turns": 204,
  },
]
`;
